--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #3eaa00;">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -66,7 +66,14 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-
+    <footer class="bg-light text-center text-lg-start" style="position: fixed;left: 0;bottom: 0;width: 100%;">
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: #3eaa00;">
+        © 2021 Copyright:
+        <a class="text-dark" href="https://mdbootstrap.com/">eUniville.com.br</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
