--- a/categorias/celulares.html
+++ b/categorias/celulares.html
@@ -24,15 +24,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/home.html">Home</a>
         </li>
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Categorias
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="C:\Users\Matheus\eUniville\categorias\celulares.html">Celulares</a>
-            <a class="dropdown-item" href="C:\Users\Matheus\eUniville\categorias\gamer.html">Gamer</a>
+            <a class="dropdown-item" href="celulares.html"> <span class="sr-only">(current)</span>Celulares</a>
+            <a class="dropdown-item" href="gamer.html">Gamer</a>
           </div>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
