atualização tela gamer

--- a/categorias/detalhes/gamer/detalhe-monitor.html
+++ b/categorias/detalhes/gamer/detalhe-monitor.html
@@ -41,20 +41,21 @@
     </div>
   </nav>
 
-    <p class="font-weight-bold m-5"> home > Celulares > Iphone 12 Pro Max, 256GB</p>
+    <p class="font-weight-bold m-5"> home > Gamer > Monitor Gamer AOC G2 Hero 27”</p>
     <div class="m-5">
         <div>
-            <img src="https://a-static.mlcdn.com.br/618x463/iphone-12-pro-max-apple-256gb-prateado-67-cam-tripla-12mp-ios/magazineluiza/155596400/00d50a75ae9b13d696186edd60f5a9e8.jpg" class="img-thumbnail">
+            <img src="https://a-static.mlcdn.com.br/618x463/monitor-gamer-aoc-g2-hero-27-led-widescreen-full-hd-hdmi-vga-ips-144hz-1ms/magazineluiza/225531400/c426083b6c78cbb0ef265226610e4630.jpg" class="img-thumbnail">
         </div>
         <div>
-            <p class="font-weight-bold">iPhone 12 Pro Max Apple 256GB Prateado 6,7” - Câm. Tripla 12MP iOS</p>
-            <p class="text-md-left">por R$8.900,00 à vista</p>
-            <p class="text-lg-left">ou R$ 9.559,00 em 12x de R$ 796,58 sem juros</p>
+            <p class="font-weight-bold">Monitor Gamer AOC G2 Hero 27” LED Widescreen - Full HD HDMI VGA IPS 144Hz 1ms</p>
+            <p class="text-md-left">por R$1.600,00 à vista</p>
+            <p class="text-lg-left">ou R$ 1.699,00 em 12x de R$ 169,90 sem juros</p>
             <button type="button" class="btn btn-success">Adicionar ao carrinho</button>
         </div>
         <p class="text-center text-success font-weight-bold m-5">INFORMAÇÕES DO PRODUTO</p>
-        <p class="text-center">iPhone 12 Pro Max Apple 256GB Prateado 6,7” - Câm. Tripla 12MP iOS
-            iPhone 12 Pro Max. Tela Super Retina XDR maior com 6,7 polegadas*. Ceramic Shield, que é quatro vezes mais resistente a quedas**. Fotos surpreendentes em pouca luz com o melhor sistema de câmera Pro em um iPhone e alcance de zoom óptico de 5x. Reprodução, edição e gravação de vídeos em Dolby Vision com qualidade de cinema. Retratos com modo Noite e experiências ainda melhores em realidade aumentada com o Scanner LiDAR. Poderoso chip A14 Bionic. Compatível com 5G***. E novos acessórios MagSafe com encaixe fácil e recarga sem fio mais rápida****. As possibilidades são espetaculares e infinitas.Avisos legais:*A tela tem bordas arredondadas. Quando medida como um retângulo, a tela tem 6,68 polegadas na diagonal. A área real de visualização é menor.**Informação baseada na comparação entre a parte da frente do iPhone 12 Pro Max (em Ceramic Shield) e a do iPhone da geração anterior.***É preciso ter um plano de dados. 5G só está disponível em alguns países e por meio de determinadas operadoras. As velocidades variam de acordo com as condições e operadoras locais. Para obter detalhes sobre a compatibilidade com 5G, entre em contato com sua operadora e consulte apple.com/br/iphone/cellular.****Os acessórios são vendidos separadamente. *****O Apple ProRAW estará disponível em breve.******O iPhone 12 Pro Max é resistente a respingos, água e poeira e foi testado em condições controladas em laboratório, classificado como IP68 segundo a norma IEC 60529 (profundidade máxima de seis metros por até 30 minutos). A resistência a respingos, água e poeira não é uma condição permanente e pode diminuir com o tempo. Não tente recarregar um iPhone molhado. Veja instruções de limpeza e secagem no Manual do Usuário. Danos decorrentes de contato com líquidos não estão incluídos na garantia.</div>
+        <p class="text-center">Monitor Gamer AOC G2 Hero 27” LED Widescreen - Full HD HDMI VGA IPS 144Hz 1ms
+          Conheça o G2 Hero 27, o monitor gamer da AOC que chegou para melhorar a sua performance e experiência com as melhores tecnologias do mercado gamer. Ele tem tela LED de 27" Widescreen com resolução Full HD e anti-reflexivo, é ultrarrápido e cheio de ótimos recursos para todos os tipo de jogos. A partir de agora, seus momentos serão ainda mais insanos e sua experiência, impecável.Testado pela NVIDIA, o tornou compatível com a tecnologia G-Sync e entrega aos gamers uma experiência lisa, rápida e responsiva em todos os jogos. Experimente uma jogabilidade impecável com a frequência de atualização de 144Hz, sem rastros e efeitos fantasma e com o tempo de resposta de 1ms, aproveite um desempenho excepcional. Sua base ergonômica garante um controle preciso para o ajuste e adaptação conveniente da altura e ângulo do seu monitor permitindo que você jogue por ainda mais tempo, sem nenhum desconforto. E conte com uma ótima visibilidade em todas as cenas com a tecnologia IPS, que garante uma melhor experiência de cores e imagens nos seus jogos. Ainda possui conexões VGA, HDMI 1.4, Display Port 1.2 e entrada para Headset e as bordas ultrafinas possibilitam uma visão ininterrupta.</p>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
