--- a/categorias/detalhes/gamer/detalhe-notebook.html
+++ b/categorias/detalhes/gamer/detalhe-notebook.html
@@ -41,20 +41,21 @@
     </div>
   </nav>
 
-    <p class="font-weight-bold m-5"> home > Celulares > Iphone 12 Pro Max, 256GB</p>
+    <p class="font-weight-bold m-5"> home > Gamer > Notebook Gamer Acer Aspire Nitro 5</p>
     <div class="m-5">
         <div>
-            <img src="https://a-static.mlcdn.com.br/618x463/iphone-12-pro-max-apple-256gb-prateado-67-cam-tripla-12mp-ios/magazineluiza/155596400/00d50a75ae9b13d696186edd60f5a9e8.jpg" class="img-thumbnail">
+            <img src="https://a-static.mlcdn.com.br/618x463/notebook-gamer-acer-aspire-nitro-5-an515-44-r8hn-amd-ryzen-7-8gb-512gb-ssd-156-nvidia-gtx-1650ti/magazineluiza/230419500/4d84dbce0556b03e0c70ab2f4d818fe6.jpg" class="img-thumbnail">
         </div>
         <div>
-            <p class="font-weight-bold">iPhone 12 Pro Max Apple 256GB Prateado 6,7” - Câm. Tripla 12MP iOS</p>
-            <p class="text-md-left">por R$8.900,00 à vista</p>
-            <p class="text-lg-left">ou R$ 9.559,00 em 12x de R$ 796,58 sem juros</p>
+            <p class="font-weight-bold">Notebook Gamer Acer Aspire Nitro 5 AN515-44-R8HN - AMD Ryzen 7 8GB 512GB SSD 15,6” NVIDIA GTX 1650TI</p>
+            <p class="text-md-left">por R$7.200,00 à vista</p>
+            <p class="text-lg-left">ou R$ 7.999,00 em 12x de R$ 666,58 sem juros</p>
             <button type="button" class="btn btn-success">Adicionar ao carrinho</button>
         </div>
         <p class="text-center text-success font-weight-bold m-5">INFORMAÇÕES DO PRODUTO</p>
-        <p class="text-center">iPhone 12 Pro Max Apple 256GB Prateado 6,7” - Câm. Tripla 12MP iOS
-            iPhone 12 Pro Max. Tela Super Retina XDR maior com 6,7 polegadas*. Ceramic Shield, que é quatro vezes mais resistente a quedas**. Fotos surpreendentes em pouca luz com o melhor sistema de câmera Pro em um iPhone e alcance de zoom óptico de 5x. Reprodução, edição e gravação de vídeos em Dolby Vision com qualidade de cinema. Retratos com modo Noite e experiências ainda melhores em realidade aumentada com o Scanner LiDAR. Poderoso chip A14 Bionic. Compatível com 5G***. E novos acessórios MagSafe com encaixe fácil e recarga sem fio mais rápida****. As possibilidades são espetaculares e infinitas.Avisos legais:*A tela tem bordas arredondadas. Quando medida como um retângulo, a tela tem 6,68 polegadas na diagonal. A área real de visualização é menor.**Informação baseada na comparação entre a parte da frente do iPhone 12 Pro Max (em Ceramic Shield) e a do iPhone da geração anterior.***É preciso ter um plano de dados. 5G só está disponível em alguns países e por meio de determinadas operadoras. As velocidades variam de acordo com as condições e operadoras locais. Para obter detalhes sobre a compatibilidade com 5G, entre em contato com sua operadora e consulte apple.com/br/iphone/cellular.****Os acessórios são vendidos separadamente. *****O Apple ProRAW estará disponível em breve.******O iPhone 12 Pro Max é resistente a respingos, água e poeira e foi testado em condições controladas em laboratório, classificado como IP68 segundo a norma IEC 60529 (profundidade máxima de seis metros por até 30 minutos). A resistência a respingos, água e poeira não é uma condição permanente e pode diminuir com o tempo. Não tente recarregar um iPhone molhado. Veja instruções de limpeza e secagem no Manual do Usuário. Danos decorrentes de contato com líquidos não estão incluídos na garantia.</div>
+        <p class="text-center">Notebook Gamer Acer Aspire Nitro 5 AN515-44-R8HN - AMD Ryzen 7 8GB 512GB SSD 15,6” NVIDIA GTX 1650TI
+          O Notebook gamer Acer Aspire Nitro 5 AN515-44-R8HN chegou para revolucionar a forma como você joga seus games favoritos, promovendo uma experiência completa de entretenimento. Sua configuração poderosa entrega um desempenho de nível desktop de forma portátil, graças ao processador AMD Ryzen 7 e aos 8GB de memória RAM com possibilidade de expansão para até 32GB. Para armazenar todos seus arquivos, jogos e programas ele conta com SSD de 512GB que possui muito mais velocidade de leitura e gravação, otimizando seu tempo. Seu design moderno apresenta linhas inspiradas no mundo gamer, com acabamento premium texturizado e detalhes robustos. Você vai se surpreender com a tela LED de 15,6" com painel IPS e resolução full HD que traz imagens totalmente nítidas e um campo de visão maior. Os gráficos ficarão ainda mais impressionantes com a placa de vídeo dedicada NVIDIA GeForce GTX 1650TI com 4GB, perfeita para rodar os jogos da última geração com facilidade e elevar sua performance para um nível profissional. Esteja sempre conectado com as diversas entradas USB, HDMI, além das conectividades wi-fi e bluetooth, e tenha mais segurança durante longas horas de uso com a tecnologia CoolBoost com duas ventoinhas que resfriam sua máquina. O produto vem equipado com sistema operacional Windows 10 Home, fácil de usar e super elegante.</p>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
