--- a/categorias/celulares.html
+++ b/categorias/celulares.html
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
         </li>
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -41,7 +41,7 @@
     </div>
   </nav>
 
-    <p class="font-weight-bold m-5"> logo-home > Celulares</p>
+    <p class="font-weight-bold m-5"> home > Celulares</p>
 
     <div class="m-5">
         <div class="card-deck">
