--- a/categorias/detalhes/gamer/detalhe-cadeira.html
+++ b/categorias/detalhes/gamer/detalhe-cadeira.html
@@ -41,20 +41,21 @@
     </div>
   </nav>
 
-    <p class="font-weight-bold m-5"> home > Celulares > Iphone 12 Pro Max, 256GB</p>
+    <p class="font-weight-bold m-5"> home > Gamer > Cadeira Gamer XT Racer Reclinável Preta e Amarela</p>
     <div class="m-5">
         <div>
-            <img src="https://a-static.mlcdn.com.br/618x463/iphone-12-pro-max-apple-256gb-prateado-67-cam-tripla-12mp-ios/magazineluiza/155596400/00d50a75ae9b13d696186edd60f5a9e8.jpg" class="img-thumbnail">
+            <img src="https://a-static.mlcdn.com.br/618x463/cadeira-gamer-xt-racer-reclinavel-preta-e-amarela-viking-series-xtr-011/magazineluiza/225508600/7a89f24ee55701f5e59591e0979310ac.jpg" class="img-thumbnail">
         </div>
         <div>
-            <p class="font-weight-bold">iPhone 12 Pro Max Apple 256GB Prateado 6,7” - Câm. Tripla 12MP iOS</p>
-            <p class="text-md-left">por R$8.900,00 à vista</p>
-            <p class="text-lg-left">ou R$ 9.559,00 em 12x de R$ 796,58 sem juros</p>
+            <p class="font-weight-bold">Cadeira Gamer XT Racer Reclinável Preta e Amarela - Viking Series XTR-011</p>
+            <p class="text-md-left">por R$1.500,00 à vista</p>
+            <p class="text-lg-left">ou R$ 1.499,00 em 12x de R$ 149,99 sem juros</p>
             <button type="button" class="btn btn-success">Adicionar ao carrinho</button>
         </div>
         <p class="text-center text-success font-weight-bold m-5">INFORMAÇÕES DO PRODUTO</p>
-        <p class="text-center">iPhone 12 Pro Max Apple 256GB Prateado 6,7” - Câm. Tripla 12MP iOS
-            iPhone 12 Pro Max. Tela Super Retina XDR maior com 6,7 polegadas*. Ceramic Shield, que é quatro vezes mais resistente a quedas**. Fotos surpreendentes em pouca luz com o melhor sistema de câmera Pro em um iPhone e alcance de zoom óptico de 5x. Reprodução, edição e gravação de vídeos em Dolby Vision com qualidade de cinema. Retratos com modo Noite e experiências ainda melhores em realidade aumentada com o Scanner LiDAR. Poderoso chip A14 Bionic. Compatível com 5G***. E novos acessórios MagSafe com encaixe fácil e recarga sem fio mais rápida****. As possibilidades são espetaculares e infinitas.Avisos legais:*A tela tem bordas arredondadas. Quando medida como um retângulo, a tela tem 6,68 polegadas na diagonal. A área real de visualização é menor.**Informação baseada na comparação entre a parte da frente do iPhone 12 Pro Max (em Ceramic Shield) e a do iPhone da geração anterior.***É preciso ter um plano de dados. 5G só está disponível em alguns países e por meio de determinadas operadoras. As velocidades variam de acordo com as condições e operadoras locais. Para obter detalhes sobre a compatibilidade com 5G, entre em contato com sua operadora e consulte apple.com/br/iphone/cellular.****Os acessórios são vendidos separadamente. *****O Apple ProRAW estará disponível em breve.******O iPhone 12 Pro Max é resistente a respingos, água e poeira e foi testado em condições controladas em laboratório, classificado como IP68 segundo a norma IEC 60529 (profundidade máxima de seis metros por até 30 minutos). A resistência a respingos, água e poeira não é uma condição permanente e pode diminuir com o tempo. Não tente recarregar um iPhone molhado. Veja instruções de limpeza e secagem no Manual do Usuário. Danos decorrentes de contato com líquidos não estão incluídos na garantia.</div>
+        <p class="text-center">Cadeira Gamer XT Racer Reclinável Preta e Amarela - Viking Series XTR-011
+          A cadeira Gamer da XT Racer giratória é uma ótima opção pra quem procura conforto e qualidade. O modelo XTR-011 da linha Viking Series é reclinável, tem regulagem de altura e seu encosto tem como inclinação ajustável em até 150°. Há também duas almofadas para lombar e cabeça que são removíveis. O estofamento é feito com material de alta qualidade que traz ao móvel resistência e confortabilidade. Ah, o peso suportado é de até 120kg e para usuários de até 1,90m. Já as cores preta e amarelo complementam o lindo design moderno e aconchegante!</p>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
