--- a/categorias/detalhes/celular/detalhe-iphone12.html
+++ b/categorias/detalhes/celular/detalhe-iphone12.html
@@ -40,7 +40,7 @@
           </form>
     </div>
   </nav>
-
+    </div>
     <p class="font-weight-bold m-5"> home > Celulares > Iphone 12, 256GB</p>
     <div class="m-5">
         <div>
@@ -54,7 +54,36 @@
         </div>
         <p class="text-center text-success font-weight-bold m-5">INFORMAÇÕES DO PRODUTO</p>
         <p class="text-center">iPhone 12. Tela Super Retina XDR brilhante de 6,1 polegadas*. Ceramic Shield, que é quatro vezes mais resistente a quedas**. Fotos surpreendentes em pouca luz com o modo Noite em todas as câmeras. Reprodução, edição e gravação de vídeos em Dolby Vision com qualidade de cinema. Poderoso chip A14 Bionic. Compatibilidade com 5G***. E novos acessórios MagSafe com encaixe fácil e recarga sem fio mais rápida****. A diversão vai começar. Avisos legais *A tela tem bordas arredondadas. Quando medida como um retângulo, a tela tem 6,06 polegadas na diagonal. A área real de visualização é menor. **Informação baseada na comparação entre a parte da frente do iPhone 12 (em Ceramic Shield) e a do iPhone da geração anterior. ***É preciso ter um plano de dados. 5G só está disponível em alguns países e por meio de determinadas operadoras. As velocidades variam de acordo com as condições e operadoras locais. Para obter detalhes sobre a compatibilidade com 5G, entre em contato com sua operadora e consulte apple.com/br/iphone/cellular. ****Os acessórios são vendidos separadamente. *****O iPhone 12 é resistente a respingos, água e poeira e foi testado em condições controladas em laboratório, classificado como IP68 segundo a norma IEC 60529 (profundidade máxima de seis metros por até 30 minutos). A resistência a respingos, água e poeira não e´ uma condição permanente e pode diminuir com o tempo. Não tente recarregar um iPhone molhado. Veja instruções de limpeza e secagem no Manual do Usuário. Danos decorrentes de contato com líquidos não estão incluídos na garantia. *******Como parte dos esforços da Apple para atingir seus objetivos ambientais, o iPhone 12 e o iPhone mini não vem com adaptador de energia nem EarPods. Você pode usar o adaptador de energia e os fones de ouvido da Apple que já tenha ou comprar esses acessórios separadamente.</p>
-    </div>
+    <p class="text-center text-success font-weight-bold m-5">VEJA TAMBÉM</p>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="card">
+          <img class="card-img-top"
+              src="https://a-static.mlcdn.com.br/618x463/iphone-12-pro-max-apple-256gb-prateado-67-cam-tripla-12mp-ios/magazineluiza/155596400/00d50a75ae9b13d696186edd60f5a9e8.jpg"
+              alt="Iphone 12 Pro Max">
+            <div class="card-body">
+                <h5 class="card-title">Iphone 12 Pro Max, 256GB</h5>
+                <p class="card-text">R$ 8.900,00</p>
+                <a href="./detalhes/celular/detalhe-iphone12promax.html" class="btn btn-secondary">Detalhes</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-deck">
+            
+            <div class="card">
+                <img class="card-img-top" src="https://i.zst.com.br/thumbs/12/2/10/1387132356.jpg"
+                    alt="Samsung Galaxy S21 Plus">
+                <div class="card-body">
+                    <h5 class="card-title">Samsung Galaxy S21 Plus, 128GB</h5>
+                    <p class="card-text">R$ 4.900,00</p>
+                    <a href="./detalhes/celular/detalhe-samsungs21plus.html" class="btn btn-secondary">Detalhes</a>
+                </div>
+            </div>
+        </div>
+
+      </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
