--- a/categorias/gamer.html
+++ b/categorias/gamer.html
@@ -24,15 +24,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/home.html">Home <span class="sr-only">(current)</span></a>
         </li>
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Categorias
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="C:\Users\Matheus\eUniville\categorias\celulares.html">Celulares</a>
-            <a class="dropdown-item" href="C:\Users\Matheus\eUniville\categorias\gamer.html">Gamer</a>
+            <a class="dropdown-item" href="/categorias/celulares.html">Celulares</a>
+            <a class="dropdown-item" href="/categorias/gamer.html">Gamer</a>
           </div>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -51,7 +51,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Notebook Gamer Acer Aspire Nitro 5 AN515-44-R8HN - AMD Ryzen 7 8GB 512GB SSD 15,6” NVIDIA GTX 1650TI</h5>
                     <p class="card-text">R$ 7.200,00</p>
-                    <a href="C:\Users\Matheus\eUniville\categorias\detalhes\gamer\detalhe-notebook.html" class="btn btn-secondary">Detalhes</a>
+                    <a href="/categorias/detalhes/gamer/detalhe-notebook.html" class="btn btn-secondary">Detalhes</a>
                 </div>
             </div>
             <div class="card">
@@ -61,7 +61,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Cadeira Gamer XT Racer Reclinável Preta e Amarela - Viking Series XTR-011</h5>
                     <p class="card-text">R$ 1.500,00</p>
-                    <a href="C:\Users\Matheus\eUniville\categorias\detalhes\gamer\detalhe-cadeira.html" class="btn btn-secondary">Detalhes</a>
+                    <a href="/categorias/detalhes/gamer/detalhe-cadeira.html" class="btn btn-secondary">Detalhes</a>
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
                 <div class="card-body">
                     <h5 class="card-title">PC Gamer Intel Core i7 3.80Ghz RAM 16GB (Geforce GTX 1650 4GB) SSD 480GB EasyPC ATK - 3GREEN</h5>
                     <p class="card-text">R$ 5.400,00</p>
-                    <a href="C:\Users\Matheus\eUniville\categorias\detalhes\gamer\detalhe-pc.html" class="btn btn-secondary">Detalhes</a>
+                    <a href="/categorias/detalhes/gamer/detalhe-pc.html" class="btn btn-secondary">Detalhes</a>
                 </div>
             </div>
             <div class="card">
@@ -84,7 +84,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Monitor Gamer AOC G2 Hero 27” LED Widescreen - Full HD HDMI VGA IPS 144Hz 1ms</h5>
                     <p class="card-text">R$ 1.600,00</p>
-                    <a href="C:\Users\Matheus\eUniville\categorias\detalhes\gamer\detalhe-monitor.html" class="btn btn-secondary">Detalhes</a>
+                    <a href="/categorias/detalhes/gamer/detalhe-monitor.html" class="btn btn-secondary">Detalhes</a>
                 </div>
             </div>
         </div>
