--- a/categorias/celulares.html
+++ b/categorias/celulares.html
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="eUniville\home.html">Home <span class="sr-only">(current)</span></a>
         </li>
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -51,7 +51,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Iphone 12, 256GB</h5>
                     <p class="card-text">R$ 6.400,00</p>
-                    <a href="C:\Users\Matheus\eUniville\categorias\detalhes\celular\detalhe-iphone12.html" class="btn btn-secondary">Detalhes</a>
+                    <a href="/categorias/detalhes/celular/detalhe-iphone12.html" class="btn btn-secondary">Detalhes</a>
                 </div>
             </div>
             <div class="card">
@@ -61,7 +61,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Iphone 12 Pro Max, 256GB</h5>
                     <p class="card-text">R$ 8.900,00</p>
-                    <a href="C:\Users\Matheus\eUniville\categorias\detalhes\celular\detalhe-iphone12promax.html" class="btn btn-secondary">Detalhes</a>
+                    <a href="/categorias/detalhes/celular/detalhe-iphone12promax.html" class="btn btn-secondary">Detalhes</a>
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Samsung Galaxy S21 Plus, 128GB</h5>
                     <p class="card-text">R$ 4.900,00</p>
-                    <a href="C:\Users\Matheus\eUniville\categorias\detalhes\celular\detalhe-samsungs21plus.html" class="btn btn-secondary">Detalhes</a>
+                    <a href="/categorias/detalhes/celular/detalhe-samsungs21plus.html" class="btn btn-secondary">Detalhes</a>
                 </div>
             </div>
             <div class="card">
@@ -84,15 +84,11 @@
                 <div class="card-body">
                     <h5 class="card-title">Samsung Galaxy S21 Ultra, 256GB</h5>
                     <p class="card-text">R$ 7.999,00</p>
-                    <a href="C:\Users\Matheus\eUniville\categorias\detalhes\celular\detalhe-samsungs21ultra.html" class="btn btn-secondary">Detalhes</a>
+                    <a href="/categorias/detalhes/celular/detalhe-samsungs21ultra.html" class="btn btn-secondary">Detalhes</a>
                 </div>
             </div>
         </div>
     </div>
-
-
-
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
