suggestions on gamer pages

--- a/categorias/detalhes/gamer/detalhe-cadeira.html
+++ b/categorias/detalhes/gamer/detalhe-cadeira.html
@@ -56,6 +56,35 @@
         <p class="text-center">Cadeira Gamer XT Racer Reclinável Preta e Amarela - Viking Series XTR-011
           A cadeira Gamer da XT Racer giratória é uma ótima opção pra quem procura conforto e qualidade. O modelo XTR-011 da linha Viking Series é reclinável, tem regulagem de altura e seu encosto tem como inclinação ajustável em até 150°. Há também duas almofadas para lombar e cabeça que são removíveis. O estofamento é feito com material de alta qualidade que traz ao móvel resistência e confortabilidade. Ah, o peso suportado é de até 120kg e para usuários de até 1,90m. Já as cores preta e amarelo complementam o lindo design moderno e aconchegante!</p>
     </div>
+    <p class="text-center text-success font-weight-bold m-5">VEJA TAMBÉM</p>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+
+          <div class="card">
+            <img class="card-img-top" src="https://a-static.mlcdn.com.br/618x463/pc-gamer-intel-core-i7-3-80ghz-ram-16gb-geforce-gtx-1650-4gb-ssd-480gb-easypc-atk-3green/3greentechnology/35464/3205776a19cb4fe3c1024aa24a749abb.jpg"
+                alt="Samsung Galaxy S21 Plus">
+            <div class="card-body">
+                <h5 class="card-title">PC Gamer Intel Core i7 3.80Ghz RAM 16GB (Geforce GTX 1650 4GB) SSD 480GB EasyPC ATK - 3GREEN</h5>
+                <p class="card-text">R$ 5.400,00</p>
+                <a href="./detalhes/gamer/detalhe-pc.html" class="btn btn-secondary">Detalhes</a>
+            </div>
+        </div>
+
+        </div>
+        <div class="col">
+            
+            <div class="card">
+              <div class="card">
+                <img class="card-img-top" src="https://a-static.mlcdn.com.br/618x463/notebook-gamer-acer-aspire-nitro-5-an515-44-r8hn-amd-ryzen-7-8gb-512gb-ssd-156-nvidia-gtx-1650ti/magazineluiza/230419500/4d84dbce0556b03e0c70ab2f4d818fe6.jpg"
+                    alt="Notebook Gamer Acer Aspire Nitro 5 AN515-44-R8HN - AMD Ryzen 7 8GB 512GB SSD 15,6” NVIDIA GTX 1650TI">
+                <div class="card-body">
+                    <h5 class="card-title">Notebook Gamer Acer Aspire Nitro 5 AN515-44-R8HN - AMD Ryzen 7 8GB 512GB SSD 15,6” NVIDIA GTX 1650TI</h5>
+                    <p class="card-text">R$ 7.200,00</p>
+                    <a href="./detalhes/gamer/detalhe-notebook.html" class="btn btn-secondary">Detalhes</a>
+                </div>
+            </div>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
