--- a/categorias/detalhes/gamer/detalhe-monitor.html
+++ b/categorias/detalhes/gamer/detalhe-monitor.html
@@ -56,6 +56,35 @@
         <p class="text-center">Monitor Gamer AOC G2 Hero 27” LED Widescreen - Full HD HDMI VGA IPS 144Hz 1ms
           Conheça o G2 Hero 27, o monitor gamer da AOC que chegou para melhorar a sua performance e experiência com as melhores tecnologias do mercado gamer. Ele tem tela LED de 27" Widescreen com resolução Full HD e anti-reflexivo, é ultrarrápido e cheio de ótimos recursos para todos os tipo de jogos. A partir de agora, seus momentos serão ainda mais insanos e sua experiência, impecável.Testado pela NVIDIA, o tornou compatível com a tecnologia G-Sync e entrega aos gamers uma experiência lisa, rápida e responsiva em todos os jogos. Experimente uma jogabilidade impecável com a frequência de atualização de 144Hz, sem rastros e efeitos fantasma e com o tempo de resposta de 1ms, aproveite um desempenho excepcional. Sua base ergonômica garante um controle preciso para o ajuste e adaptação conveniente da altura e ângulo do seu monitor permitindo que você jogue por ainda mais tempo, sem nenhum desconforto. E conte com uma ótima visibilidade em todas as cenas com a tecnologia IPS, que garante uma melhor experiência de cores e imagens nos seus jogos. Ainda possui conexões VGA, HDMI 1.4, Display Port 1.2 e entrada para Headset e as bordas ultrafinas possibilitam uma visão ininterrupta.</p>
     </div>
+    <p class="text-center text-success font-weight-bold m-5">VEJA TAMBÉM</p>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+
+          <div class="card">
+            <img class="card-img-top" src="https://a-static.mlcdn.com.br/618x463/pc-gamer-intel-core-i7-3-80ghz-ram-16gb-geforce-gtx-1650-4gb-ssd-480gb-easypc-atk-3green/3greentechnology/35464/3205776a19cb4fe3c1024aa24a749abb.jpg"
+                alt="Samsung Galaxy S21 Plus">
+            <div class="card-body">
+                <h5 class="card-title">PC Gamer Intel Core i7 3.80Ghz RAM 16GB (Geforce GTX 1650 4GB) SSD 480GB EasyPC ATK - 3GREEN</h5>
+                <p class="card-text">R$ 5.400,00</p>
+                <a href="./detalhes/gamer/detalhe-pc.html" class="btn btn-secondary">Detalhes</a>
+            </div>
+        </div>
+
+        </div>
+        <div class="col">
+            
+            <div class="card">
+              <div class="card">
+                <img class="card-img-top" src="https://a-static.mlcdn.com.br/618x463/notebook-gamer-acer-aspire-nitro-5-an515-44-r8hn-amd-ryzen-7-8gb-512gb-ssd-156-nvidia-gtx-1650ti/magazineluiza/230419500/4d84dbce0556b03e0c70ab2f4d818fe6.jpg"
+                    alt="Notebook Gamer Acer Aspire Nitro 5 AN515-44-R8HN - AMD Ryzen 7 8GB 512GB SSD 15,6” NVIDIA GTX 1650TI">
+                <div class="card-body">
+                    <h5 class="card-title">Notebook Gamer Acer Aspire Nitro 5 AN515-44-R8HN - AMD Ryzen 7 8GB 512GB SSD 15,6” NVIDIA GTX 1650TI</h5>
+                    <p class="card-text">R$ 7.200,00</p>
+                    <a href="./detalhes/gamer/detalhe-notebook.html" class="btn btn-secondary">Detalhes</a>
+                </div>
+            </div>
+    
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
