--- a/categorias/detalhes/gamer/detalhe-pc.html
+++ b/categorias/detalhes/gamer/detalhe-pc.html
@@ -133,6 +133,36 @@
           
           ATENÇÃO: De acordo com o nosso estoque momentâneo algum dos componentes podem ser alterados, porém, sempre enviaremos um item similar ou superior ao adquirido. As imagens dos gabinetes são meramente ilustrativas.</p>
     </div>
+
+    <p class="text-center text-success font-weight-bold m-5">VEJA TAMBÉM</p>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+
+          <div class="card">
+            <img class="card-img-top"
+                src="https://a-static.mlcdn.com.br/618x463/cadeira-gamer-xt-racer-reclinavel-preta-e-amarela-viking-series-xtr-011/magazineluiza/225508600/7a89f24ee55701f5e59591e0979310ac.jpg"
+                alt="Iphone 12 Pro Max">
+            <div class="card-body">
+                <h5 class="card-title">Cadeira Gamer XT Racer Reclinável Preta e Amarela - Viking Series XTR-011</h5>
+                <p class="card-text">R$ 1.500,00</p>
+                <a href="./detalhes/gamer/detalhe-cadeira.html" class="btn btn-secondary">Detalhes</a>
+            </div>
+        </div>
+        </div>
+        <div class="col">
+            
+          <div class="card">
+            <img class="card-img-top"
+                src="https://a-static.mlcdn.com.br/618x463/monitor-gamer-aoc-g2-hero-27-led-widescreen-full-hd-hdmi-vga-ips-144hz-1ms/magazineluiza/225531400/c426083b6c78cbb0ef265226610e4630.jpg"
+                alt="Samsung Galaxy S21 Ultra">
+            <div class="card-body">
+                <h5 class="card-title">Monitor Gamer AOC G2 Hero 27” LED Widescreen - Full HD HDMI VGA IPS 144Hz 1ms</h5>
+                <p class="card-text">R$ 1.600,00</p>
+                <a href="./detalhes/gamer/detalhe-monitor.html" class="btn btn-secondary">Detalhes</a>
+            </div>
+        </div>
+      </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
