--- a/categorias/detalhes/celular/detalhe-iphone12.html
+++ b/categorias/detalhes/celular/detalhe-iphone12.html
@@ -31,8 +31,8 @@
             Categorias
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/categorias/celulares.html">Celulares</a>
-            <a class="dropdown-item" href="/categorias/gamer.html">Gamer<span class="sr-only">(current)</span></a>
+            <a class="dropdown-item" href="../categorias/celulares.html">Celulares</a>
+            <a class="dropdown-item" href="../categorias/gamer.html">Gamer<span class="sr-only">(current)</span></a>
           </div>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -50,7 +50,7 @@
             <p class="font-weight-bold">iPhone 12 Apple 256GB - Azul Tela 6,1” 12MP iOS.</p>
             <p class="text-md-left">por R$6.400,00 à vista</p>
             <p class="text-lg-left">ou R$ 6.799,00 em 12x de R$ 566,58 sem juros</p>
-            <button type="button" class="btn btn-success">Adicionar ao carrinho</button>
+            <a href="C:\Users\Matheus\eUniville\carrinho.html"><button type="button" class="btn btn-success">Adicionar ao carrinho</button></a>
         </div>
         <p class="text-center text-success font-weight-bold m-5">INFORMAÇÕES DO PRODUTO</p>
         <p class="text-center">iPhone 12. Tela Super Retina XDR brilhante de 6,1 polegadas*. Ceramic Shield, que é quatro vezes mais resistente a quedas**. Fotos surpreendentes em pouca luz com o modo Noite em todas as câmeras. Reprodução, edição e gravação de vídeos em Dolby Vision com qualidade de cinema. Poderoso chip A14 Bionic. Compatibilidade com 5G***. E novos acessórios MagSafe com encaixe fácil e recarga sem fio mais rápida****. A diversão vai começar. Avisos legais *A tela tem bordas arredondadas. Quando medida como um retângulo, a tela tem 6,06 polegadas na diagonal. A área real de visualização é menor. **Informação baseada na comparação entre a parte da frente do iPhone 12 (em Ceramic Shield) e a do iPhone da geração anterior. ***É preciso ter um plano de dados. 5G só está disponível em alguns países e por meio de determinadas operadoras. As velocidades variam de acordo com as condições e operadoras locais. Para obter detalhes sobre a compatibilidade com 5G, entre em contato com sua operadora e consulte apple.com/br/iphone/cellular. ****Os acessórios são vendidos separadamente. *****O iPhone 12 é resistente a respingos, água e poeira e foi testado em condições controladas em laboratório, classificado como IP68 segundo a norma IEC 60529 (profundidade máxima de seis metros por até 30 minutos). A resistência a respingos, água e poeira não e´ uma condição permanente e pode diminuir com o tempo. Não tente recarregar um iPhone molhado. Veja instruções de limpeza e secagem no Manual do Usuário. Danos decorrentes de contato com líquidos não estão incluídos na garantia. *******Como parte dos esforços da Apple para atingir seus objetivos ambientais, o iPhone 12 e o iPhone mini não vem com adaptador de energia nem EarPods. Você pode usar o adaptador de energia e os fones de ouvido da Apple que já tenha ou comprar esses acessórios separadamente.</p>
