--- a/categorias/detalhes/gamer/detalhe-cadeira.html
+++ b/categorias/detalhes/gamer/detalhe-cadeira.html
@@ -31,8 +31,8 @@
             Categorias
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/categorias/celulares.html">Celulares</a>
-            <a class="dropdown-item" href="/categorias/gamer.html">Gamer<span class="sr-only">(current)</span></a>
+            <a class="dropdown-item" href="../categorias/celulares.html">Celulares</a>
+            <a class="dropdown-item" href="../categorias/gamer.html">Gamer<span class="sr-only">(current)</span></a>
           </div>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -67,7 +67,7 @@
             <div class="card-body">
                 <h5 class="card-title">PC Gamer Intel Core i7 3.80Ghz RAM 16GB (Geforce GTX 1650 4GB) SSD 480GB EasyPC ATK - 3GREEN</h5>
                 <p class="card-text">R$ 5.400,00</p>
-                <a href="./detalhes/gamer/detalhe-pc.html" class="btn btn-secondary">Detalhes</a>
+                <a href="../detalhes/gamer/detalhe-pc.html" class="btn btn-secondary">Detalhes</a>
             </div>
         </div>
 
@@ -81,7 +81,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Notebook Gamer Acer Aspire Nitro 5 AN515-44-R8HN - AMD Ryzen 7 8GB 512GB SSD 15,6” NVIDIA GTX 1650TI</h5>
                     <p class="card-text">R$ 7.200,00</p>
-                    <a href="./detalhes/gamer/detalhe-notebook.html" class="btn btn-secondary">Detalhes</a>
+                    <a href="../detalhes/gamer/detalhe-notebook.html" class="btn btn-secondary">Detalhes</a>
                 </div>
             </div>
 
