--- a/categorias/gamer.html
+++ b/categorias/gamer.html
@@ -31,8 +31,8 @@
             Categorias
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/categorias/celulares.html">Celulares</a>
-            <a class="dropdown-item" href="/categorias/gamer.html">Gamer<span class="sr-only">(current)</span></a>
+            <a class="dropdown-item" href="../categorias/celulares.html">Celulares</a>
+            <a class="dropdown-item" href="../categorias/gamer.html">Gamer<span class="sr-only">(current)</span></a>
           </div>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
